--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,8 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
+    "react-slick": "^0.30.1",
+    "slick-carousel": "^1.8.1",
     "sort-by": "^1.2.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
