--- a/frontend/components.json
+++ b/frontend/components.json
@@ -7,8 +7,7 @@
     "config": "tailwind.config.js",
     "css": "src/index.css",
     "baseColor": "slate",
-    "cssVariables": false,
-    "prefix": ""
+    "cssVariables": true
   },
   "aliases": {
     "components": "@/components",
