actualizando dockerfile y dockercompose

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -43,8 +43,11 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>3.2.2</version>
+				<configuration>
+					<mainClass>com.s3java.calendarioInteligente.CalendarioInteligenteApplication</mainClass>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
