--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
     "react-slick": "^0.30.1",
@@ -53,7 +54,6 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "eslint-plugin-tailwindcss": "^3.14.2",
     "husky": "^9.0.11",
     "postcss": "^8.4.35",
     "prettier": "^3.2.5",
