--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.9'
 services:
   java_app:
     container_name: java_app
-    build: .
+    image: duquenestor/javacalendario:latest
     ports:
       - "8080:8080"
     environment:
