--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,20 +24,21 @@
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
-    "@reduxjs/toolkit": "^2.1.0",
+    "@reduxjs/toolkit": "^2.2.1",
+    "@tanstack/react-table": "^8.12.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lint-staged": "^15.2.2",
     "localforage": "^1.10.0",
-    "lucide-react": "^0.323.0",
+    "lucide-react": "^0.335.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
-    "react-router-dom": "^6.22.0",
-    "react-slick": "^0.30.1",
+    "react-router-dom": "^6.22.1",
+    "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "sort-by": "^1.2.0",
     "tailwind-merge": "^2.2.1",
@@ -45,13 +46,13 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20.11.17",
-    "@types/react": "^18.2.55",
+    "@types/node": "^20.11.19",
+    "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
     "@types/react-slick": "^0.23.13",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
-    "@vitejs/plugin-react-swc": "^3.5.0",
+    "@vitejs/plugin-react-swc": "^3.6.0",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
@@ -64,7 +65,7 @@
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.2.2",
-    "vite": "^5.1.0"
+    "typescript": "^5.3.3",
+    "vite": "^5.1.3"
   }
 }
