--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.jpa.properties.jakarta.persistence.sharedCache.mode = ALL
 spring.jpa.open-in-view = false
-server.port=${PORT:3000}
+# swagger-ui custom path
+springdoc.swagger-ui.path=/swagger-ui.html
 
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.datasource.driverClassName=com.postgresql.jdbc.Driver
+spring.jpa.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://${PROD_DB_HOST}:${PROD_DB_PORT}/${PROD_DB_NAME}
 spring.datasource.username=${PROD_DB_USERNAME}
 spring.datasource.password=${PROD_DB_PASSWORD}
