--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.jpa.properties.jakarta.persistence.sharedCache.mode = ALL
 spring.jpa.open-in-view = false
 # swagger-ui custom path
 springdoc.swagger-ui.path=/swagger-ui.html
+server.port=${PORT:8080}
 
 spring.jpa.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://${PROD_DB_HOST}:${PROD_DB_PORT}/${PROD_DB_NAME}
