--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -8,10 +8,10 @@
   "tailwindFunctions": ["clsx", "cn", "twMerge", "tw"],
   "plugins": ["prettier-plugin-tailwindcss", "@trivago/prettier-plugin-sort-imports"],
   "importOrder": [
-    "^react$|react-[rd]",
-    "^.*/hooks",
-    "(?!^@/components/icons/)^.*components/|^.*ui/|^\\.\\./[A-Z].*/[A-Z][^/]*$",
-    "^.*icons/",
+    "^react$|^react-[rd]",
+    "^.*hook",
+    "(?!^@/components/icons/)^.*components/|^.*ui/|^\\.\\./[A-Z].*/[A-Z][^/]*$|^@radix-ui/",
+    "^.*icons/|^lucide",
     "^.*(?<!\\.css)$",
     "^.*\\.css$"
   ],
