--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix && prettier --write ./src",
     "preview": "vite preview",
     "prepare": "cd .. && husky frontend/.husky"
   },
