--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -5,8 +5,16 @@
   "tabWidth": 2,
   "useTabs": false,
   "endOfLine": "auto",
-  "tailwindFunctions": ["clsx", "cn", "twMerge", "tw"],
-  "plugins": ["prettier-plugin-tailwindcss", "@trivago/prettier-plugin-sort-imports"],
+  "tailwindFunctions": [
+    "clsx",
+    "cn",
+    "twMerge",
+    "tw"
+  ],
+  "plugins": [
+    "prettier-plugin-tailwindcss",
+    "@trivago/prettier-plugin-sort-imports"
+  ],
   "importOrder": [
     "^react$|^react-[rd]|^@reduxjs",
     "^.*hook",
