--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -12,8 +12,8 @@
     "tw"
   ],
   "plugins": [
+    "@trivago/prettier-plugin-sort-imports",
     "prettier-plugin-tailwindcss",
-    "@trivago/prettier-plugin-sort-imports"
   ],
   "importOrder": [
     "^react$|^react-[rd]|^@reduxjs",
