--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -11,12 +11,13 @@ spring.datasource.password=${PROD_DB_PASSWORD}
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.generate-ddl=true
 logging.level.org.hibernate.SQL=debug
+spring.jpa.hibernate.ddl-auto=update
 
 
 spring.datasource.initialization-mode=always
 spring.jpa.show-sql=true
-spring.jpa.generate-ddl=true
-logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 server.error.include-message=never
+
+logging.level.org.springframework.security: DEBUG
 
