--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -5,17 +5,8 @@
   "tabWidth": 2,
   "useTabs": false,
   "endOfLine": "auto",
-  "tailwindFunctions": [
-    "clsx",
-    "cn",
-    "twMerge",
-    "tw",
-    "cva"
-  ],
-  "plugins": [
-    "@trivago/prettier-plugin-sort-imports",
-    "prettier-plugin-tailwindcss"
-  ],
+  "tailwindFunctions": ["clsx", "cn", "twMerge", "tw", "cva"],
+  "plugins": ["@trivago/prettier-plugin-sort-imports", "prettier-plugin-tailwindcss"],
   "importOrder": [
     "^react$|^react-[rd]|^@reduxjs",
     "^.*hook",
