--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,7 @@
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
     "date-fns": "^3.3.1",
+    "jwt-decode": "^4.0.0",
     "lint-staged": "^15.2.2",
     "localforage": "^1.10.0",
     "lucide-react": "^0.335.0",
