--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,12 @@
     ]
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.4",
+    "@mui/material": "^5.15.12",
+    "@mui/styled-engine-sc": "6.0.0-alpha.17",
+    "@mui/x-date-pickers": "^6.19.6",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -52,6 +57,7 @@
     "react": "^18.2.0",
     "react-big-calendar": "^1.11.0",
     "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^6.2.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
@@ -59,8 +65,10 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
     "react-slick": "^0.30.2",
+    "react-time-picker": "^6.6.0",
     "slick-carousel": "^1.8.1",
     "sort-by": "^1.2.0",
+    "styled-components": "^6.1.8",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
